Use new Java 21 methods introduced on java.util.List